syntax = "proto3";
package artifact;

// The CreateArtifact service definition
service CreateArtifact {
  // Creates an artifact that can be used for proof requests
  rpc CreateArtifact (CreateArtifactRequest) returns (CreateArtifactResponse);
}

// Types of artifacts
enum ArtifactType {
  UNSPECIFIED_ARTIFACT_TYPE = 0;
  PROGRAM = 1;  // A program artifact
  STDIN = 2;    // A stdin artifact
  PROOF = 3;    // A proof artifact
}

// Request to create an artifact
message CreateArtifactRequest {
  // The signature of the user on a pre-defined message. Used for authentication
  bytes signature = 1;
  
  // The type of artifact to create
  ArtifactType artifact_type = 2;
}

// Response with artifact details
message CreateArtifactResponse {
  // The unique resource identifier of the artifact
  string artifact_uri = 1;
  
  // The presigned url to upload the artifact
  string artifact_presigned_url = 2;
}
